--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"> 
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="image of a yawning male lion"> 
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="image of a yawning male lion" title="Just like house cats, lions get sleepy too!"> 
 
 </body>
 </html>
